[package]
name = "tiny_places_standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
piston_window = "0.132.0"
rodio = "0.18.1"
freetype-rs = "0.34.0"
vecmath = "1.0.0"
image = "0.25.1"
rand = "0.8.5"